<resources>
    <string name="app_name">Notes app (Room Example)</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">title</string>
    <string name="description">description</string>
    <string name="delete">Delete</string>
    <string name="back">Back</string>
    <string name="add_note">Add note</string>
</resources>